# temp

./: .gitignore  README.md
Bash/: regex.sh
C#/Crypto/: Crypto.sln
C#/Crypto/Authenticator/: Authenticator.csproj  Base32.cs  Hotp.cs  Totp.cs
C#/Crypto/Crypto/: Crypto.csproj  Program.cs
C#/Files/: Files.sln
C#/Files/DirWalker/: Program.cs
C#/Files/Files/: Program.cs
C#/Files/PrependNewLine/: Program.cs
C#/Files/RecursiveTouch/: Program.cs
C#/Files/RecursiveTouch/Properties/: launchSettings.json
C#/Files/ShowDirectoryName/: Program.cs
C#/Hadoop build utilities/Failed tests runner/: Failed tests runner.sln
C#/Hadoop build utilities/Failed tests runner/Failed tests runner/: Failed tests runner.csproj  FailedTestInfo.cs  Program.cs
C#/Hadoop build utilities/Failed tests runner/Failed tests runner/Properties/PublishProfiles/: Ubuntu.pubxml
C#/Language/: Language.sln
C#/Language/CustomComparerHashSet/: Person.cs  PersonComparer.cs  Program.cs
C#/Language/GeoTrie/: GeoLocation.cs  GeoTrie.csproj  Program.cs
C#/Language/RESTClient/: MatchMakerClient.cs  Program.cs  RESTClient.csproj
C#/Language/XMLCreater/: Gender.cs  Person.cs  Program.cs  XmlCreator.cs  XmlParser.cs
C#/gRPC/Client/: Client.sln
C#/gRPC/Client/Client/: Client.csproj  Program.cs
C#/gRPC/Client/Client/Protos/: Math.proto
C++/: CMakeLists.txt  CMakeSettings.json
C++/Files/: Basename.cpp
C++/Limits/: overflow.cc
C++/OpenSSL/: CMakeLists.txt  CheckEvp.cpp  RandomBytes.cpp  RandomClientID.cpp
C++/STL/: lower upper bound.cpp  vector.cpp
C++/Streams/: cout.cpp
C++/Windows/: ConsoleWrite.cpp  ReadCertificate.cpp
C++/stdio/: snprintf.c
Docker/Files/: Dockerfile  file.txt
Docker/Hadoop/: Dockerfile
Docker/Hadoop-2/: Dockerfile
Docker/Hadoop-2/scripts/: hadoop-setup-script.sh  yarn.sh
Docker/Hadoop-3/: Dockerfile
Docker/Hadoop-3/files/: core-site.xml  hdfs-site.xml  mapred-site.xml
Docker/Hadoop-3/scripts/: hdfs.sh  rc.local
Docker/Hadoop-build/: build.sh
Docker/Hadoop-dev/: Dockerfile
Docker/Hadoop-multinode/: Dockerfile  README.md
Docker/Hadoop-multinode/scripts/: pwdless-ssh.sh  setup.sh
Docker/Hadoop/scripts/: start-hdfs.service  start-hdfs.sh
Docker/Hadoop_Spark_Fundamentals_Code_Notes-V3.0/: NOTES.txt
JSP/MyWebsite/src/app/backend/: MyApp.java
JSP/MyWebsite/src/app/frontend/: home.jsp
Java/Language/src/: PersonCollection.java  SystemPaths.java
Java/Log4j/: pom.xml
Java/Log4j/src/main/java/: BufferedConsoleOutputStream.java  Client.java  ConsoleWriter.java  CustomAppender.java
Java/Log4j/src/main/resources/: log4j.properties
Java/XMLReader/resources/: input.xml
Java/XMLReader/src/: DateOfBirth.java  GeologicalPoint.java  MatchData.java  Person.java  PlaceOfBirth.java  RequestParser.java  TimeOfBirth.java  XMLReader.java
Java/gRPC/AMNMProxyRPC/: pom.xml
Java/gRPC/AMNMProxyRPC/src/main/proto/: yarn_server_nodemanager_amnm_proxy.proto
Java/gRPC/Calculator/: pom.xml
Java/gRPC/Calculator/src/main/java/client/: CalculatorClient.java
Java/gRPC/Calculator/src/main/java/server/: CalculatorServer.java  CalculatorService.java
Java/gRPC/Calculator/src/main/proto/: Math.proto
Java/gRPC/Server/src/main/java/: CalculatorService.java  Server.java
Java/gRPC/Server/src/main/proto/: Math.proto
Java/src/: Gender.java  Person.java
Resharper errors/for-loop/: CMakeLists.txt  CMakeSettings.json  for-loop.c
cmake/openssl/: CMakeLists.txt
cmake/protobuf/: CMakeLists.txt
go/cgo/: main.cc  main.go
go/cgo/lib/: CMakeLists.txt
go/cgo/math/: main.go
go/cgo/math/lib/: add.cpp
go/cgo/queue/: client.go
go/cgo/queue/lib/: CMakeLists.txt  blocking-queue.cpp  blocking-queue.h  main.cpp  server.cpp  server.h  worker.cpp  worker.h
go/loadlib/: math.go
go/loadlib/math/: math.sln
go/loadlib/math/math/: math.cpp  math.vcxproj  math.vcxproj.filters
js/Crypto/: crypto.js  hex.js  x.js
